Remove external use of SEC_TraversePermCerts(). Bug 130968.