security/nss/lib/jar/jarver.c
@@ -65,23 +65,6 @@ char *xp_HUGE_STRCPY (char *to, char ZHUGEP *from);
 /* from certdb.h */
 #define CERTDB_USER (1<<6)
 
-#if 0
-/* from certdb.h */
-extern PRBool SEC_CertNicknameConflict
-   (char *nickname, CERTCertDBHandle *handle);
-/* from certdb.h */
-extern SECStatus SEC_AddTempNickname
-   (CERTCertDBHandle *handle, char *nickname, SECItem *certKey);
-/* from certdb.h */
-typedef SECStatus (* PermCertCallback)(CERTCertificate *cert, SECItem *k, void *pdata);
-
-/* from certdb.h */
-SECStatus SEC_TraversePermCerts
-   (CERTCertDBHandle *handle, PermCertCallback certfunc, void *udata);
-#endif
-
-
-
 #define SZ 512
 
 static int jar_validate_pkcs7 
